--- a/VRChat/22/1306722.html
+++ b/VRChat/22/1306722.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/CLi6sfE7y0jvaAaT1GuM+CpCHpxYgY1vewWP/sWojw="></script>
+    "+atEczo052oB+oxS17T9Jo+anPEwxN8QmvoER4aHIHE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アバター追従機構(回転同期＋相対位置保持)【VRChat向け】","description":"内容物\nUnitypackeg\n簡易説明書(これ)\n\nUnitypackeg内訳\nRotate_Joint prefab\n\n\n簡易説明\nSpring JointとFixed Jointを使用した機構です。\nオブジェクトが遅れて追従、回転方向がユーザーに同期、ユーザーと相対位置保持の機能を有します。\n\nS_joint_anchor：Spring Jointのアンカーです\nF_joint_anchor：Fixed Jointのアンカーです\nSpring_joint：Spring Jointでひっぱってくるものです\nFixed_joint：Fixed Jointで回転させるものです\nCube：追従オブジェクトの代わりです\n\n追従速度はSpring_jointについているRigidbodyコンポーネントのDrag(空気抵抗)の値で調整してください。値が大きいほど遅く動きます。\n回転速度はFixed_JointについているRigidbodyコンポーネントのAngular Drag(回転の空気抵抗)で調整できるはずです(未検証)\n\n\n※注意※\nVRChat上で自分の視点からは遅れて追従しているように見えません。\nUnity上で動作の確認をする場合、Spring_joint以下のオブジェクトをアバターの外に出し、再生ボタンを押したうえでアバターを移動させたり回転させたりしてください。\n\n動画に使用させていただいているアバター及びオブジェクトは付属しません。\n\nUnityの基本コンポーネントを使用しているだけなので、特に利用規約等はありません。\n\n\n詳しい機構解説を追加情報に書き込みました。\n相対位置保持の方法とか手順を追って載ってます。\n少し試したらできる感じなので、VRC内で聞いてくれたら普通に答えます。","url":"https://booth.pm/ja/items/1306722","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/029a6605-a6bb-4972-a811-0c155ec2ed4d/i/1306722/94440c75-a033-4036-9afb-481bf6339a9a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/CLi6sfE7y0jvaAaT1GuM+CpCHpxYgY1vewWP/sWojw="></script>
+    nonce="+atEczo052oB+oxS17T9Jo+anPEwxN8QmvoER4aHIHE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -467,9 +467,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
