--- a/VRChat/21/1307621.html
+++ b/VRChat/21/1307621.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "8//WUUFiSOGXaOHWv9v63NvF1qRPXSxFy7TwxpNaxuQ="></script>
+    "h22/C1edk9v+YnQdeOvNMdaOLdTTF23ktDuPYBhPw0c="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル] 07 ラウンドブーツ用追加テクスチャ","description":"[3Dモデル] 07 ラウンドブーツ用追加テクスチャ\n\n2019/04/07　v1　公開\n2019/12/21　v1.0b　説明文を修正\n2020/06/16　規約のURLを修正\n\n・配布元\nyagura Lab. https://ygr.booth.pm/\n\n・作者\nyagura（やぐら）\n\n・配布物について\n当boothで販売中のラウンドブーツ( https://ygr.booth.pm/items/1282439 )用に作成したテクスチャファイルです\nカラーバリエーションはピンク/黄/茶の３色です\n\nラウンドブーツとは丸いつま先が特徴的なレースアップブーツです\nテクスチャファイルはミドル丈の14ホール用、ショート丈の8ホール用の２種セットです\n\n＊本商品には「ラウンドブーツ」のモデルは付属しません\nお手数ですが別途、「ラウンドブーツ」をお買い求めください\n\nテクスチャファイルを加工すれば好きなカラーバリエーションが作れます\n改変テクスチャをPNG形式で書き出したものについては、二次的創作物としての配布、販売が可能です\n\n\n・内容物\nrboots_exTEX.txt：説明書（このファイル）\n/DOC/kiyaku.pdf：配布物利用規約\n/TEX/rboots_08.psd：テクスチャ改変用PSDファイル　8ホール用\n/TEX/rboots_08_各色.png：カラーテクスチャ　8ホール用\n/TEX/rboots_14.psd：テクスチャ改変用PSDファイル　14ホール用\n/TEX/rboots_14_各色.png：カラーテクスチャ　14ホール用\n\n\n・テクスチャ改変用PSDファイルについて\nphotoshopCS5で作成\nCLIPStudioPaintでも開けますが、レイヤー効果（ドロップシャドウ）が再現されません\n1024*1024pixel\nUVマップ付です\n\n\n・参考リンク\n響狐リク　https://booth.pm/ja/items/1148939\nArktoon-Shaders　https://github.com/synqark/Arktoon-Shaders\nArktoon-Shadersの使い方　https://synqark.github.io/Arktoon-Shaders-Doc/\n制作過程　https://twitter.com/yagura/status/1103366013066727425\n\n・着せ替えについて\nやりかた　https://note.com/ygr/n/n8213154bce8b\n\n\n\n・ご利用に際して\n配布物のご利用にあたっては「yagura Lab.配布物利用規約」に同意いただくことが必要です\n\n・規約URL\nhttps://ygr.booth.pm/items/2152918\n\n以下、規約の抜粋です\n\n・規約の範囲内で許可されることの例\nモデルやテクスチャの改変\n改変テクスチャの配布、販売\n他のモデルへの組み込みや流用\n配布物を利用した作品の展示や配布、および動画配信\nアバターとしての利用\nVRChatでのペデスタルへの設定（Public/Clone設定可）\n成人向けコンテンツへの利用\nゲームや映像作品に組み込んでの商用利用\n\n・禁止事項\n配布物そのもの、もしくは一部を作者の許可なく第三者が取得できるようにすること\n公序良俗に反する行為や目的、反社会的な行為や目的、特定の信条や宗教、政治的発言\nなんらかの製品及びサービスの名誉と品位を傷つける行為\n作者を偽る表示や行為\n\n・免責事項\n配布物の利用、および利用不能に起因する損害損失等について、作者は一切責任を負いません\n\n・連絡先\n不具合や規約の確認などありましたらお気軽にお問い合わせください\ntwitter　https://twitter.com/yagura\nマシュマロ　https://marshmallow-qa.com/yagura\n\n\n以上","url":"https://booth.pm/ja/items/1307621","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/3822c6ac-775f-466b-99fc-a14ec221ff33/i/1307621/c17b5b0b-8d6d-4fdb-b381-2f3be59e4ded_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8//WUUFiSOGXaOHWv9v63NvF1qRPXSxFy7TwxpNaxuQ="></script>
+    nonce="h22/C1edk9v+YnQdeOvNMdaOLdTTF23ktDuPYBhPw0c="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -447,9 +447,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
