--- a/VRChat/05/1307305.html
+++ b/VRChat/05/1307305.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VdkXXei/bJZZROzsybOe0Ya0YtkBKL1e7HGNWNJ7IYU="></script>
+    "UJPAU0MhArMnMUES+EutfmXNH/SJ1mYDON0zWA3UZlE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRoid用旧スクール水着","description":"クソ暑い夏を水着で乗り切れ\n\n\n内容物はテクスチャ1枚だけです。\n\nテクスチャの書き込み量が著しく少ないので、シェーダーやマットキャップで誤魔化しましょう。\n\n改変の有無を問わず再配布、自作発言を禁止します。その他特に利用規約は設けませんが、当データを用いて生じたいかなる結果に対しても私は責任を負いません。","url":"https://booth.pm/ja/items/1307305","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/f7e2c44b-6a34-444a-861a-c7c10759a9b0/i/1307305/bd6f9804-cb23-40f3-a2d1-0228238ce4a1_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VdkXXei/bJZZROzsybOe0Ya0YtkBKL1e7HGNWNJ7IYU="></script>
+    nonce="UJPAU0MhArMnMUES+EutfmXNH/SJ1mYDON0zWA3UZlE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -447,9 +447,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
