--- a/VRChat/98/1307198.html
+++ b/VRChat/98/1307198.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "k8lkJFM89uel3uDf2uCDEbKnr0uKDdNoBCf01rw8w1g="></script>
+    "6o3Pg7GkGmiSOX+ntRoZ4yKCfHm4AjyHvCzGB/A2obI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"提供(無料版あり）","description":"この番組は、ご覧のスポンサーの提供でお送りいたします。\n・GAFA\n","url":"https://booth.pm/ja/items/1307198","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"15000"},"image":"https://booth.pximg.net/c/620x620/90142dc5-94e2-429c-a719-4db89af8e2cc/i/1307198/65f72040-4fd8-4bc6-bb99-af557e0ca542_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="k8lkJFM89uel3uDf2uCDEbKnr0uKDdNoBCf01rw8w1g="></script>
+    nonce="6o3Pg7GkGmiSOX+ntRoZ4yKCfHm4AjyHvCzGB/A2obI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -538,9 +538,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
