--- a/VRChat/98/1306398.html
+++ b/VRChat/98/1306398.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fjFqs/DAvchkqQwmRVuS/42QRUumyyLB4hKjFZIkRXU="></script>
+    "AyntFKXm4G3z7dvSAlJt2Psi8AYGNs7/dq1bwZVKxOw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【PC版VRChat向け】5色のミニスカート","description":"【PC版VRChat向け】\nファッションのバリエーションとして、5種類のカラーバリエーションテクスチャの入ったスカートを用意しました！\n\n2022年5月7日　Phys Bonesへの対応版をリリースしました。\nDynamic Bone対応版は旧バージョンとして残してあります。\nShaderをliltoonへ変更しました。\n\n---旧仕様の説明---\nDynamic Boneが導入済みなら、設定もPrefabにて済ませたものがすぐ使えます。\nまた、負荷低減に配慮したDynamic Bone6本バージョンと\n柔らかく揺れることを重視したDynamic Bone40本バージョンの\n使い分けれる２つのバリエーションを用意しております。\n\nスカートの色変えは、マテリアルにセットするテクスチャを変えるだけですぐできます！\nコーディネイトのバリエーションとしていかがでしょうか？\n\n\n更新履歴\n2022/5/7 ver1.2リリース Phys Bonesに対応。Unityバージョンを2019.4.31fに変更。Shaderをliltoonに変更。\n2020/4/9 ver1.1リリース arktoon-shaderを最新版に更新。Unity2018版VRCにあわせ、テクスチャ設定を更新\n2019/04/06 ver1.0.0リリース\n","url":"https://booth.pm/ja/items/1306398","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/d93c3674-a136-49a1-a2f3-9a8202a223cd/i/1306398/f65bfa86-fd4a-416f-a108-d31d00fa42a3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fjFqs/DAvchkqQwmRVuS/42QRUumyyLB4hKjFZIkRXU="></script>
+    nonce="AyntFKXm4G3z7dvSAlJt2Psi8AYGNs7/dq1bwZVKxOw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -510,9 +510,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
