--- a/VRChat/61/1292661.html
+++ b/VRChat/61/1292661.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lknrTqv+peky69A0Hee60DXEBtOmbonD2/V6lDEGeOE="></script>
+    "B7xA+qoqiChUUaeVdUctsx+n5mXrpmGPrKcgILRiafA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】Uni Size Seal (サイズ シール) テクスチャ素材","description":"テクスチャ改変用の透過png画像素材です。\n\n服から剥がすのをつい忘れてしまうあのシールを、”あえて貼るため”のテクスチャ素材です。\n","url":"https://booth.pm/ja/items/1292661","offers":{"priceCurrency":"JPY","@type":"Offer","price":"198"},"image":"https://booth.pximg.net/c/620x620/0b8c0ae5-9b47-4d8d-adcb-3d51a8fb4fb1/i/1292661/934ee0bf-8675-42c2-bcd4-510ab131682e_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lknrTqv+peky69A0Hee60DXEBtOmbonD2/V6lDEGeOE="></script>
+    nonce="B7xA+qoqiChUUaeVdUctsx+n5mXrpmGPrKcgILRiafA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -491,9 +491,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
